--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             </div>
 
                             <div class="relative w-full h-64 bg-gray-800 rounded-lg overflow-hidden border border-gray-700 group shrink-0">
-                                <img src="profile.jpg" alt="Prateek Tiwari" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500">
+                                <img src="photo.jpeg" alt="Prateek Tiwari" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500">
                                 <div class="scan-line"></div>
                                 <div class="absolute inset-0 bg-cyan-500/10 pointer-events-none"></div>
                                 <div class="absolute top-2 left-2 w-3 h-3 border-t-2 border-l-2 border-cyan-500/50"></div>
@@ -611,4 +611,5 @@
         });
     </script>
 </body>
+
 </html>
